--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "music-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4"
-  }
+	"name": "music-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.1.4",
+		"next-auth": "^4.3.1",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"spotify-web-api-node": "^5.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.24",
+		"@types/react": "^18.0.1",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.4",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.23",
+		"typescript": "^4.6.3"
+	}
 }
