--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^4.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^17.0.24",
